fix: backdrop not showing in product card

--- a/src/theme/utils/_mixins.scss
+++ b/src/theme/utils/_mixins.scss
@@ -75,7 +75,6 @@
     top: 0;
     right: 0;
     bottom: 0;
-    z-index: -1;
     height: 100%;
     left: 0;
     background-color: var(--text-high);
